--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -10,7 +10,14 @@ background-color: grey;
     background-color: black;
     color: black;
     width: 100%;
-    
+}
+
+#displayPicture {
+    border-radius: 100%;
+    height: 70px;
+    width: 80px;
+    margin-top: 5px;
+    margin-left: 45px;
 }
 
 header h1 {
@@ -43,23 +50,59 @@ header h1 {
 
 /*Main Section*/
 
-div #flex {
+#flex {
 display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly;
 }
 
-section .aside {
+#aside-1 {
     flex-basis: 30%;
     height: 20%;
     margin: 10px;
+    padding-bottom: 101px;
     border: 1px black solid;
-    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    text-align: right;
+    box-sizing: border-box;
+    padding-right: 15px;
+
 
 }
-section #section-1 {
-    flex-basis: 50%;
+#section-1 {
+    flex-basis: 65%;
     height: 20%;
     margin: 10px;
+    padding: 1rem;
     border: 1px black solid;
-    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-size: ;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+#aside-2 {
+    flex-basis: 30%;
+    height: 20%;
+    margin: 10px;
+    padding-bottom: 101px;
+    border: 1px black solid;
+    font-family: 'Raleway', sans-serif;
+    text-align: right;
+    box-sizing: border-box;
+    padding-right: 15px;
+}
+
+.section-2-projects {
+    flex-basis: 65%;
+    height: 500px;
+    margin: 10px;
+    border: black 1px solid;
+    box-sizing: border-box;
+}
+#projectImage {
+    width: 400px;
+    height: 300px;
+    object-fit: cover;
 }
 
