--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -94,6 +94,7 @@ justify-content: space-evenly;
 }
 
 .section-2-projects {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -105,8 +106,6 @@ justify-content: space-evenly;
 }
 
 .projectImage {
-    
-    
     width: 200px;
     height: 200px;
     object-fit: cover;
