--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -6,10 +6,11 @@ background-color: grey;
     outline: 1px lightgray;
     display: flex;
     justify-content: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: black;
-    color: black;
+    color: #e5e5e5;
     width: 100%;
+    margin-bottom: 25px;
 }
 
 #displayPicture {
@@ -22,10 +23,10 @@ background-color: grey;
 
 header h1 {
     font-family: 'Megrim', cursive;
-    font-size: 40px;
-    color: white;
+    font-size: 45px;
+    color:#e5e5e5;
     text-decoration: none;
-    padding-top: 20px;
+    padding-top: 22px;
     background-color: black;
 
 }
@@ -41,7 +42,7 @@ header h1 {
     display: inline-block;
     margin: 30px 160px 30px 30px;
     color: white;
-    font-size: 24px;
+    font-size: 32px;
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     padding: 2px 5px;
@@ -53,16 +54,17 @@ header h1 {
 #flex {
 display: flex;
 flex-wrap: wrap;
-justify-content: space-evenly;
+justify-content: space-around
 }
 
 #aside-1 {
-    flex-basis: 30%;
+    flex-basis: 25%;
     height: 20%;
     margin: 10px;
-    padding-bottom: 101px;
-    border: 1px black solid;
+    padding-bottom: 128px;
+    border-right: 10px black solid;
     font-family: 'Raleway', sans-serif;
+    font-size: 20px;
     text-align: right;
     box-sizing: border-box;
     padding-right: 15px;
@@ -70,24 +72,25 @@ justify-content: space-evenly;
 
 }
 #section-1 {
-    flex-basis: 65%;
+    flex-basis: 70%;
     height: 20%;
     margin: 10px;
-    padding: 1rem;
+    padding: 21px;
     border: 1px black solid;
     font-family: 'Raleway', sans-serif;
-    font-size: ;
+    font-size:20px;
     text-align: center;
     box-sizing: border-box;
 }
 
 #aside-2 {
-    flex-basis: 30%;
+    flex-basis: 25%;
     height: 20%;
     margin: 10px;
     padding-bottom: 101px;
-    border: 1px black solid;
+    border-right: 10px black solid;
     font-family: 'Raleway', sans-serif;
+    font-size: 20px;
     text-align: right;
     box-sizing: border-box;
     padding-right: 15px;
@@ -95,23 +98,32 @@ justify-content: space-evenly;
 
 .section-2-projects {
     flex-direction: row;
-    justify-content: space-evenly;
     flex-wrap: wrap;
-    flex-basis: 65%;
-    height: 700px;
-    padding-top: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
+    flex-basis: 70%;
+    height: 645px;
+   padding: 20px;
     margin: 10px;
     border: black 1px solid;
     box-sizing: border-box;
 }
 
-.projectImage {
-    width: 290px;
-    height: 260px;
+.projectImages {
+    width: 350px;
+    height: 275px;
     object-fit: cover;
-    border: solid black 1px;
-    margin: 20px;
+    box-sizing: border-box;
+    /* border: solid black 1px; */
+    margin: 2px;
 }
 
+.bottomFooter {
+    width: 100%;
+    height: 100px;
+    margin-top: 100px;
+    background-color: black;
+    color: #e5e5e5;
+}
+
+.bottomFooter ul li {
+    color: #e5e5e5;
+}
