--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-background-color: grey;
+background-color: rgb(185, 185, 185);
 }
 
 .header {
@@ -10,7 +10,7 @@ background-color: grey;
     background-color: black;
     color: #e5e5e5;
     width: 100%;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
 }
 
 #displayPicture {
@@ -45,17 +45,19 @@ header h1 {
     font-size: 32px;
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
-    padding: 2px 5px;
+    padding: 2px 7px;
     border-radius: 25px;
 }
 
-/*Main Section*/
+/*Flex properties*/
 
 #flex {
 display: flex;
 flex-wrap: wrap;
 justify-content: space-around
 }
+
+/* Row 1 */
 
 #aside-1 {
     flex-basis: 25%;
@@ -69,19 +71,24 @@ justify-content: space-around
     box-sizing: border-box;
     padding-right: 15px;
 
-
 }
+
+
+
 #section-1 {
     flex-basis: 70%;
     height: 20%;
     margin: 10px;
     padding: 21px;
     border: 1px black solid;
+    border-radius: 50px;
     font-family: 'Raleway', sans-serif;
     font-size:20px;
     text-align: center;
     box-sizing: border-box;
 }
+
+/* Row 2 */
 
 #aside-2 {
     flex-basis: 25%;
@@ -97,14 +104,24 @@ justify-content: space-around
 }
 
 .section-2-projects {
+    justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
     flex-basis: 70%;
-    height: 645px;
-   padding: 20px;
+    height: 730px;
+    padding: 20px;
     margin: 10px;
     border: black 1px solid;
+    border-radius: 50px 50px 0px 0px;
     box-sizing: border-box;
+}
+
+.section-2-projects p {
+    font-family: 'Raleway', sans-serif;
+    border-top: 2px solid black;
+    font-size: 20px;
+    padding: 5px;
+    text-align: center;
 }
 
 .projectImages {
@@ -112,18 +129,39 @@ justify-content: space-around
     height: 275px;
     object-fit: cover;
     box-sizing: border-box;
-    /* border: solid black 1px; */
-    margin: 2px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
+
+/* Footer */
 
 .bottomFooter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 25px;
     width: 100%;
-    height: 100px;
+    height: 110px;
     margin-top: 100px;
     background-color: black;
-    color: #e5e5e5;
 }
 
-.bottomFooter ul li {
+.bottomFooter div ul p {
     color: #e5e5e5;
+    font-family: 'Raleway', sans-serif;
+}
+
+.bottomFooter div ul a {
+    color: #e5e5e5;
+    font-family: 'Raleway', sans-serif;
+    border-radius: 200px;
+    padding: 2px 5px;
+}
+
+.bottomFooter ul a:hover {
+    background-color:rgb(38, 106, 233);
+    transition-duration: 0.5s;
+    cursor: default;
+}
 }
