--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -133,6 +133,15 @@ justify-content: space-around
     margin-bottom: 15px;
 }
 
+.mainProjectImg {
+    width: 1195px;
+    height: 370px;
+    object-fit: cover;
+    box-sizing: border-box;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 /* Footer */
 
 .bottomFooter {
@@ -164,4 +173,7 @@ justify-content: space-around
     transition-duration: 0.5s;
     cursor: default;
 }
+
+/* @media (max-width: 768px) { */
+    
 }
