--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -137,15 +137,8 @@ justify-content: space-evenly
     color: inherit;
 }
 
-.projectImages {
-    width: 100%;
-    max-width: 1400px;
-    height: auto;
-    /* ^ responsive image properites ^ */
-    object-fit: cover;
-    box-sizing: border-box;
-    margin-top: 15px;
-    margin-bottom: 15px;
+.imgContainer {
+    flex-basis: 275px;
 }
 
 .mainProjectImg {
@@ -158,6 +151,19 @@ justify-content: space-evenly
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
+.projectImages {
+    width: 100%;
+    max-width: 1400px;
+    height: auto;
+    /* ^ responsive image properites ^ */
+    object-fit: cover;
+    box-sizing: border-box;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+
 
 /* Footer */
 
@@ -219,16 +225,18 @@ justify-content: space-evenly
         
         #displayPicture {
             border-radius: 100%;
+            width: 100%;
+            max-width: 75px;
             height: 70px;
-            width: 80px;
             margin-top: 5px;
             margin-left: 45px;
         }
         
         header h1 {
             font-family: 'Megrim', cursive;
-            font-size: 45px;
+            font-size: 20px;
             color:#e5e5e5;
+            margin-left: 15px;
             text-decoration: none;
             padding-top: 22px;
             background-color: black;
@@ -246,7 +254,7 @@ justify-content: space-evenly
             display: inline-block;
             margin: 30px 160px 30px 30px;
             color: white;
-            font-size: 32px;
+            font-size: 20px;
             font-family: 'Raleway', sans-serif;
             font-weight: 500;
             padding: 2px 7px;
